--- a/src/app/cmps/post-list/post-list.component.scss
+++ b/src/app/cmps/post-list/post-list.component.scss
@@ -8,11 +8,11 @@
     row-gap: 15px;
 }
 
-.coming-son {
+.coming-soon {
     text-align: center;
     font-family: 'Open Sans',sans-serif;
     color: #757575;
-
+    padding: 20px 0 40px;
 }
 
 @media (max-width: 900px) {
