adding db - firebase

--- a/src/app/cmps/post/post.component.html
+++ b/src/app/cmps/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="post">
+<div *ngIf="post" class="post">
     <img [src]="post.mainImg" />
     <div class="header">
         <div class="tags">
