--- a/src/app/cmps/info-list/info-list.component.scss
+++ b/src/app/cmps/info-list/info-list.component.scss
@@ -47,6 +47,7 @@
         }
     }
     .latest-posts {
+        direction: rtl;
         width: 100%;
         margin-bottom: 25px;
         .post {
@@ -67,7 +68,7 @@
             font-family: 'Josefin';
             img {
                 width: 40%;
-                margin-right: 10px;
+                margin-left: 10px;
             }
         }
 
