--- a/src/app/cmps/post-list/post-list.component.html
+++ b/src/app/cmps/post-list/post-list.component.html
@@ -2,8 +2,7 @@
     <ng-container *ngFor="let post of postList; let i = index">
         <post [post]="post"></post>
     </ng-container>
-    <div class="coming-soon" *ngIf="postList.length === 0">
-        Coming Soon
-    </div>
 </main>
-
+<div class="coming-soon" *ngIf="postList && postList.length === 0">
+    Coming Soon
+</div>
