--- a/src/app/cmps/post/post.component.scss
+++ b/src/app/cmps/post/post.component.scss
@@ -1,4 +1,5 @@
 .post {
+    direction: rtl;
     text-align: center;
     border-bottom: 1px solid #e4e4e4;
     padding-bottom: 35px;
@@ -8,17 +9,17 @@
         margin-bottom: 30px;
     }
     .header {
-        height: 90px;
+        min-height: 90px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
     }
     .title {
         color: #0a0a0a;
         line-height: 32px;
         font-size: 27px;
-        font-family: 'Josefin';
+        font-family: 'Heebo', 'Josefin';
         margin: 10px 0 6px;
     }
     .text,
@@ -28,9 +29,12 @@
         display: block;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Open Sans',sans-serif;
+        font-family: 'Heebo', 'Open Sans',sans-serif;
         color: #757575;
         line-height: 25px;
+    }
+    .tags {
+        direction: ltr;
     }
     .tag {
         display: inline-block;
