--- a/src/app/cmps/info-list/info-list.component.scss
+++ b/src/app/cmps/info-list/info-list.component.scss
@@ -77,7 +77,7 @@
         margin-bottom: 25px;
         iframe {
             height: 275px;
-
+            pointer-events: none;
         }
     }
     .follow-us {
