--- a/src/app/cmps/post-page/post-page.component.html
+++ b/src/app/cmps/post-page/post-page.component.html
@@ -12,7 +12,7 @@
             <p class="content-title">{{content?.title}}</p>
             <p [ngClass]="{'list': content?.secondTitle}"><span *ngIf="content?.secondTitle">{{content?.secondTitle}} - </span>{{content?.text}}</p>
             <div class="imgs" *ngIf="content?.images">
-                <span *ngFor="let img of content?.images">
+                <span class="img" *ngFor="let img of content?.images">
                     <img [src]="img?.url" />
                     <span>{{img.desc}}</span>
                 </span>
