--- a/src/app/cmps/post-page/post-page.component.scss
+++ b/src/app/cmps/post-page/post-page.component.scss
@@ -4,7 +4,7 @@
     direction: rtl;
     padding: 20px 20px 0;
     .post {
-        max-width: 1150px;
+        max-width: 1050px;
         margin: auto;
         display: flex;
         flex-direction: column;
@@ -21,7 +21,7 @@
         .date,
         .tags,
         .tag {
-            font-size: 13px;
+            font-size: 14px;
             font-weight: 400;
             font-family: 'Heebo', 'Open Sans',sans-serif;
             color: #757575;
@@ -59,8 +59,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            img {
-                padding: 0 10px;
+            .img {
+                display: flex;
+                flex-direction: column;
+                img {
+                    padding: 0 10px;
+                }
+                span {
+                    padding: 5px;
+                    font-size: 13px;
+                }   
             }
         }
     }
