--- a/src/app/cmps/post-page/post-page.component.scss
+++ b/src/app/cmps/post-page/post-page.component.scss
@@ -80,8 +80,11 @@
         .post {
             .imgs {
                 flex-direction: column;
-                img {
-                    padding: 0 10px;
+                .img {
+                    // padding: 0 10px;
+                    img {
+                        padding: 0 !important;
+                    }
                 }
             }
         }
