--- a/src/app/cmps/post-page/post-page.component.scss
+++ b/src/app/cmps/post-page/post-page.component.scss
@@ -36,7 +36,11 @@
                 span {
                     font-family: 'Heebo', 'Open Sans',sans-serif;
                     font-weight: bolder;
-
+                    a {
+                        font-family: 'Heebo', 'Open Sans',sans-serif;
+                        font-weight: bolder;
+                        color: black;
+                    }
                 }
             }
             .content-title {
