--- a/src/app/cmps/filter/filter.component.html
+++ b/src/app/cmps/filter/filter.component.html
@@ -23,9 +23,9 @@
         <div class="filter-img" [ngClass]="{'active': topic === 'kenya'}"></div>
         <div class="filter-title">Kenya</div>
     </div>
-    <div class="filter-option" (click)="select('greace')">
+    <div class="filter-option" (click)="select('greece')">
         <div class="filter-img" [ngClass]="{'active': topic === 'greace'}"></div>
-        <div class="filter-title">Greace</div>
+        <div class="filter-title">Greece</div>
     </div>
     <div class="filter-option" (click)="select('mexico')">
         <div class="filter-img" [ngClass]="{'active': topic === 'mexico'}"></div>
