--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
 <nav-bar></nav-bar>
 <router-outlet></router-outlet>
 <div class="instegram-pics">
-    <iframe src="https://snapwidget.com/embed/944727" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100vw; background-color: #f4f3ef;"></iframe>    
+  <iframe
+    src="https://snapwidget.com/embed/944727"
+    class="snapwidget-widget"
+    allowtransparency="true"
+    frameborder="0"
+    scrolling="no"
+    style="
+      border: none;
+      overflow: hidden;
+      width: 100vw;
+      background-color: #f4f3ef;
+    "
+  ></iframe>
 </div>
 <contact></contact>
