--- a/src/app/cmps/contact/contact.component.html
+++ b/src/app/cmps/contact/contact.component.html
@@ -1,15 +1,17 @@
 <footer class="footer">
-    <div class="info">
-        <button (click)="open('https://www.instagram.com/passportfortwo_')">
-            <fa-icon [icon]="faInstagramSquare" class="icon"></fa-icon>
-        </button>
-        <a href="https://www.instagram.com/passportfortwo_">passportfortwo_</a>
-    </div>
-    <div class="info">
-        <button (click)="open('mailto:passportfortwo2020@gmail.com')">
-            <fa-icon [icon]="faEnvelope" class="icon"></fa-icon>
-        </button>
-        <a href="mailto:passportfortwo2020@gmail.com">passportfortwo2020@gmail.com</a>
-    </div>
-    <div class="rights">© 2021 PASSPORT FOR TWO</div>
+  <div class="info">
+    <button (click)="open('https://www.instagram.com/passportfortwo_')">
+      <fa-icon [icon]="faInstagramSquare" class="icon"></fa-icon>
+    </button>
+    <a href="https://www.instagram.com/passportfortwo_">passportfortwo_</a>
+  </div>
+  <div class="info">
+    <button (click)="open('mailto:passportfortwo2020@gmail.com')">
+      <fa-icon [icon]="faEnvelope" class="icon"></fa-icon>
+    </button>
+    <a href="mailto:passportfortwo2020@gmail.com"
+      >passportfortwo2020@gmail.com</a
+    >
+  </div>
+  <div class="rights">© 2022 PASSPORT FOR TWO</div>
 </footer>
