--- a/src/app/cmps/post-page/post-page.component.scss
+++ b/src/app/cmps/post-page/post-page.component.scss
@@ -1,96 +1,97 @@
 .post-page {
-    margin: 48px 0;
-    text-align: center;
-    direction: rtl;
-    padding: 20px 20px 0;
-    .post {
-        max-width: 1050px;
-        margin: auto;
+  margin: 48px 0;
+  text-align: center;
+  direction: rtl;
+  padding: 20px 20px 0;
+  .post {
+    max-width: 1050px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h1,
+    p {
+      font-family: "Heebo";
+      margin: 15px 0;
+    }
+    .title {
+      font-size: 25px;
+    }
+    .text,
+    .date,
+    .tags,
+    .tag {
+      font-size: 14px;
+      font-weight: 400;
+      font-family: "Heebo", "Open Sans", sans-serif;
+      color: #757575;
+      line-height: 25px;
+    }
+    .text {
+      font-size: 15px;
+      margin-top: 10px;
+      width: 100%;
+      font-family: "Heebo", "Open Sans", sans-serif;
+      .list {
+        text-align: right;
+        span {
+          font-family: "Heebo", "Open Sans", sans-serif;
+          font-weight: bolder;
+          a {
+            font-family: "Heebo", "Open Sans", sans-serif;
+            font-weight: bolder;
+            color: black;
+          }
+        }
+      }
+      .content-title {
+        font-family: "Heebo", "Open Sans", sans-serif;
+        font-size: 20px;
+        font-weight: bolder;
+      }
+    }
+    p {
+      margin: 7px 0;
+    }
+    img {
+      width: 100%;
+    }
+    .main-img {
+      margin-bottom: 15px;
+    }
+    .imgs {
+      padding: 20px 0 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .img {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        h1, p {
-            font-family: 'Heebo';
-            margin: 15px 0;
-        }
-        .title {
-            font-size: 25px;
-        }
-        .text,
-        .date,
-        .tags,
-        .tag {
-            font-size: 14px;
-            font-weight: 400;
-            font-family: 'Heebo', 'Open Sans',sans-serif;
-            color: #757575;
-            line-height: 25px;
-        }
-        .text {
-            font-size: 15px;
-            margin-top: 10px;
-            font-family: 'Heebo', 'Open Sans',sans-serif;
-            .list {
-                text-align: right;
-                span {
-                    font-family: 'Heebo', 'Open Sans',sans-serif;
-                    font-weight: bolder;
-                    a {
-                        font-family: 'Heebo', 'Open Sans',sans-serif;
-                        font-weight: bolder;
-                        color: black;
-                    }
-                }
-            }
-            .content-title {
-                font-family: 'Heebo', 'Open Sans',sans-serif;
-                font-size: 20px;
-                font-weight: bolder;
-            }
-        }
-        p {
-            margin: 7px 0;
-        }
         img {
-            width: 100%;
+          padding: 0 10px;
         }
-        .main-img {
-            margin-bottom: 15px;
+        span {
+          padding: 5px;
+          font-size: 13px;
         }
-        .imgs {
-            padding: 20px 0 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            .img {
-                display: flex;
-                flex-direction: column;
-                img {
-                    padding: 0 10px;
-                }
-                span {
-                    padding: 5px;
-                    font-size: 13px;
-                }   
-            }
-        }
+      }
     }
+  }
 }
 
-
 @media (max-width: 700px) {
-    .post-page {
-        .post {
-            .imgs {
-                flex-direction: column;
-                .img {
-                    // padding: 0 10px;
-                    img {
-                        padding: 0 !important;
-                    }
-                }
-            }
+  .post-page {
+    .post {
+      .imgs {
+        flex-direction: column;
+        .img {
+          // padding: 0 10px;
+          img {
+            padding: 0 !important;
+          }
         }
+      }
     }
+  }
 }
