css - blog page

--- a/src/app/cmps/post-list/post-list.component.html
+++ b/src/app/cmps/post-list/post-list.component.html
@@ -1,6 +1,6 @@
 <main class="post-list" [ngClass]="{ 'blog-page': isBlogPage }">
   <ng-container *ngFor="let post of postList; let i = index">
-    <post *ngIf="post.showPost" [post]="post"></post>
+    <post *ngIf="post.showPost" [post]="post" [isBlogPage]="isBlogPage"></post>
   </ng-container>
 </main>
 <div class="coming-soon" *ngIf="postList && postList.length === 0">
