--- a/src/app/cmps/post-list/post-list.component.scss
+++ b/src/app/cmps/post-list/post-list.component.scss
@@ -1,28 +1,28 @@
 .blog-page {
-    max-width: 1150px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    column-gap: 15px;
-    row-gap: 15px;
+  max-width: 1150px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  column-gap: 15px;
+  row-gap: 15px;
 }
 
 .coming-soon {
-    text-align: center;
-    font-family: 'Open Sans',sans-serif;
-    color: #757575;
-    padding: 20px 0 40px;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  color: #757575;
+  padding: 20px 0 40px;
 }
 
 @media (max-width: 900px) {
-    .blog-page {
-        grid-template-columns: 1fr 1fr;
-    }
+  .blog-page {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (max-width: 600px) {
-    .blog-page {
-        grid-template-columns: 1fr;
-    }
+  .blog-page {
+    grid-template-columns: 1fr;
+  }
 }
