--- a/src/app/cmps/post-page/post-page.component.scss
+++ b/src/app/cmps/post-page/post-page.component.scss
@@ -70,6 +70,7 @@
         flex-direction: column;
         img {
           padding: 0 10px;
+          max-height: 450px;
         }
         span {
           padding: 5px;
